Fix table cell alignment

--- a/web/themes/custom/citizen_dart/components/01-parts/tables/_table-mixins.scss
+++ b/web/themes/custom/citizen_dart/components/01-parts/tables/_table-mixins.scss
@@ -72,6 +72,7 @@
 	td{
 		padding: 1rem 2rem .5rem;
 		font-size: 2rem;
+    vertical-align: top;
 		&:first-child{
 			padding-left: 3.5rem;
 		}
